--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -1,6 +1,6 @@
 /* Colores */
 
 $color-header: rgb(251,234,218);
-$color-footer: rgb(235,147,146);
-$color-footer2: rgb(247,201,185);
-$color-main: rgb(247,201,185);
+$color-footer: rgb(254,186,140);
+$color-main: rgb(254,186,140);
+$color-nav: rgb(254,186,140);
