--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,18 +4,33 @@
 
 
 footer {
-    background-color:$color-header;
+    background-color:$color-footer;
+
+    h5 {
+        color: white ;
+    }
+
+    ul {
+      list-style: none; 
+    
+      a:link, a:active, a:visited{
+        text-decoration: none;
+
+        color: black;
+      }
+    }
+
+
+    
 }
 
 nav {
-    background-color: $color-header;
-}
-
-h2 {
-    background-color: $color-header;
+    background-color: $color-nav;
     
 }
+
 
 main {
     background-color: $color-main;
 }
+
